--- a/Login e Cadastro/login.html
+++ b/Login e Cadastro/login.html
@@ -43,7 +43,7 @@
                         </div>
                             <div class="buttons">
                                 <button class="botaoEntrar" href="" onclick="entrar()">Entrar</button>
-                                <a class="botaoCadastro" href="cadastro.html">Não tem uma conta?</a>
+                                <a class="botaoCadastro" href="cadastro.html">Esquceu a senha?</a>
                             </div>
 
                         
