Alterações de css

--- a/Login e Cadastro/home.html
+++ b/Login e Cadastro/home.html
@@ -13,7 +13,10 @@
 
 
             <nav>
-                <img class="logo" src="assets/logoClara.png">
+                <a href="#home">
+                    <img class="logo" src="assets/logoClara.png">
+                </a>
+               
 
                 <input type="checkbox" class="menuTrigger" style="position: absolute; opacity: 0;">
 
@@ -24,7 +27,7 @@
                 </div>
 
                 <div class="links">
-                    <li><a href="">Home</a></li>
+                    <li><a href="#home">Home</a></li>
                     <li><a href="#sobre-nos">Sobre nós</a></li>
                     <li><a href="#vantagens">Vantagens</a></li>
                 </div>
