Alterações em css

--- a/Login e Cadastro/home.html
+++ b/Login e Cadastro/home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="CSS/home.css">
+    <link rel="shortcut icon" href="assets/logoClara.png" type="image/x-icon">
 </head>
 <body>
     <!-- Primeira tela -->
@@ -85,7 +86,7 @@
 
         <div class="container">
 
-            <span class="title">Vantagen da <label class="destaque">companhia</label></span>
+            <span class="title">Vantagem da <label class="destaque">companhia</label></span>
 
             <div class="boxes">
 
