--- a/Login e Cadastro/login.html
+++ b/Login e Cadastro/login.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/login.css">
+    <link rel="shortcut icon" href="assets/logoClara.png" type="image/x-icon">
     <title>Login</title>
 </head>
 
@@ -43,7 +44,7 @@
                         </div>
                             <div class="buttons">
                                 <button class="botaoEntrar" href="" onclick="entrar()">Entrar</button>
-                                <a class="botaoCadastro" href="cadastro.html">Esquceu a senha?</a>
+                                <a class="botaoCadastro" href="cadastro.html">Esqueceu a senha?</a>
                             </div>
 
                         
