Adicão do webDataViz Login e Cadastro

--- a/web-data-viz-main/site/public/index.html
+++ b/web-data-viz-main/site/public/index.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <script src="./js/funcoes.js"></script>
     <link rel="stylesheet" href="CSS/home.css">
     <link rel="shortcut icon" href="assets/logoClara.png" type="image/x-icon">
+    
 </head>
 
 <body>
