--- a/web-data-viz-main/site/public/cadastro.html
+++ b/web-data-viz-main/site/public/cadastro.html
@@ -215,7 +215,8 @@
             console.log("resposta: ", resposta);
 
             if (resposta.ok) {
-            
+                
+                alert('Cadastro realizado com sucesso!')
                 setTimeout(() => {
                     window.location = "login.html";
                 }, "1000")
