--- a/site/public/dashboard/html/computadores.html
+++ b/site/public/dashboard/html/computadores.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Computadores</title>
     <link rel="stylesheet" href="../css/geral.css">
+    <link rel="stylesheet" href="../css/computadores.css">
 </head>
+
 <body>
     <section class="left-side-window" id="caixa1">
         <div class="container">
 
             <div class="user-info">
-                <span id="nome_empresa" class="text-geral">Monitor mind</span><img src="../assets/home/imagem-do-usuario-com-fundo-preto.png">
+                <span id="nome_empresa" class="text-geral">Monitor mind</span><img
+                    src="../assets/home/imagem-do-usuario-com-fundo-preto.png">
             </div>
 
             <div class="nav-itens">
                 <div><a href="home.html"><span class="text-geral" id="text-geral13">Visão geral</span></a></div>
-                <div><a href="computadores.html"><span style="color: #4eabe9" class="text-geral" id="text-geral14">Computadores</span></a></div>
+                <div><a href="computadores.html"><span style="color: #4eabe9" class="text-geral"
+                            id="text-geral14">Computadores</span></a></div>
                 <div><a href="usuarios.html"><span class="text-geral" id="text-geral15">Usuários</span></a></div>
                 <div><a href="analytcs.html"><span class="text-geral" id="text-geral16">Analytics</span></a></div>
             </div>
@@ -30,7 +35,83 @@
     </section>
 
     <section class="right-side-window">
-        Content
+        <div class="container">
+            <div class="titulo">
+                <h1>Nome Empresa</h1>
+
+                <img src="../assets/home/logoEscura.png" alt="">
+            </div>
+
+            <div class="filtro">
+
+                <div class="container">
+
+                    <div class="tituloFiltro">
+                        <p>Filtros:</p>
+                    </div>
+
+                    <div class="filtroSelect">
+                        <div class="campoFiltro">
+                            <p>Componente em alerta:</p>
+                            <select name="" id="">
+                                <option value="">CPU</option>
+                            </select>
+                        </div>
+                        <div class="campoFiltro">
+                            <p>Tipo de alerta:</p>
+                            <select name="" id="">
+                                <option value="">Vermelho</option>
+                            </select>
+                        </div>
+                        <div class="campoFiltro">
+                            <p>Numero Identificação:</p>
+                            <select name="" id="">
+                                <option value="">PE21424</option>
+                            </select>
+                        </div>
+                        <div class="campoFiltro">
+                            <p>Setor:</p>
+                            <select name="" id="">
+                                <option value="">Vendas</option>
+                            </select>
+                        </div>
+                        <div class="botaoFiltro">
+                            <button>Buscar</button>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+
+            <div class="pc">
+                <div class="pcIndi">
+
+
+                </div>
+
+            </div>
+
+            <div class="gerenciar">
+                <div class="container">
+                    <p>Gerenciar Computadores:</p>
+                    <button>Gerenciar</button>
+                </div>
+            </div>
+
+        </div>
     </section>
 </body>
+
 </html>
+
+<script>
+    // const divisao = document.getElementById("pcc");
+
+    // for (let i = 1; i <= 9; i++) {
+        
+    //     let pcIndi = document.createElement("pcIndividual");
+        
+    //     divisao.appendChild(pcIndi);
+    // }
+</script>
