--- a/site/public/dashboard/html/home.html
+++ b/site/public/dashboard/html/home.html
@@ -36,8 +36,8 @@
         <div class="container">
 
             <nav>
-                <li><img src="../assets/home/icon-lua.png" class="icone-tema" id="tema" onclick="trocarTema()"></li>
-                <li><img src="../assets/home/logoEscura.png" class="logo" id="logo"></li>
+                <li><img src="../../assets/icon-lua.png" class="icone-tema" id="tema" onclick="trocarTema()"></li>
+                <li><img src="../assets/home/logoEscura.png" class="logo" id="logoImagem"></li>
             </nav>
 
             <div class="kpi-dados caixa" id="caixa2">
