arrumando tema do site

--- a/site/public/dashboard/html/home.html
+++ b/site/public/dashboard/html/home.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="../css/home.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
-<body onload="trocarTema()">
+<body>
     
     <section class="left-side-window" id="caixa1">
         <div class="container">
@@ -19,7 +19,7 @@
             </div>
 
             <div class="nav-itens">
-                <div style="color: #4eabe9"><span class="text-geral" id="text-geral13">Visão geral</span></div>
+                <div><span class="text-geral" id="text-geral13" style="color: #4eabe9">Visão geral</span></div>
                 <div><a href="computadores.html"><span class="text-geral" id="text-geral14">Computadores</span></a></div>
                 <div><a href="usuarios.html"><span class="text-geral" id="text-geral15">Usuários</span></a></div>
                 <div><a href="analytcs.html"><span class="text-geral" id="text-geral16">Analytics</span></a></div>
@@ -36,7 +36,7 @@
         <div class="container">
 
             <nav>
-                <li><img src="../../assets/icon-lua.png" class="icone-tema" id="tema" onclick="trocarTema()"></li>
+                <li><img src="../../assets/icon-lua.png" class="icone-tema" id="tema" style="display: none;"></li>
                 <li><img src="../assets/home/logoEscura.png" class="logo" id="logoImagem"></li>
             </nav>
 
