--- a/site/public/dashboard/html/computadores.html
+++ b/site/public/dashboard/html/computadores.html
@@ -83,9 +83,25 @@
             <div class="pc">
 
                 <div class="pc-container">
-
-                
-
+                    <!-- <div class="pcIndiv">
+                        <div class="box">
+                            <div class="imgBox">
+                                <img src="../assets/computador/iconPc.png" alt="">
+                            </div>
+                            <div class="textoBox">
+                                <p>Setor: A</p>
+                                <p>Número identificado</p>
+                                <p>PE21323DACB</p>
+                            </div>
+                        </div>
+    
+                        <div class="boxStatus">
+                            <div class="rede status">Rede</div>
+                            <div class="ram status">RAM</div>
+                            <div class="cpu status">CPU</div>
+                            <div class="disco status">Disco</div>
+                        </div>
+                    </div> -->
                 </div>
             </div>
 
