--- a/site/public/dashboard/html/computadores.html
+++ b/site/public/dashboard/html/computadores.html
@@ -80,9 +80,9 @@
 
             </div>
 
-            <div class="pc">
+            <div class="pc"> <a href="computadorIndividual.html">
 
-                <div class="pc-container">
+                <div class="pc-container"> 
                     <!-- <div class="pcIndiv">
                         <div class="box">
                             <div class="imgBox">
@@ -103,7 +103,7 @@
                         </div>
                     </div> -->
                 </div>
-            </div>
+            </a></div>
 
             <div class="preFooter">
                 <div class="botoes">
