Tela de cadastro de usuários terminada sem mmodasl

--- a/site/public/dashboard/html/usuarios.html
+++ b/site/public/dashboard/html/usuarios.html
@@ -44,7 +44,7 @@
 
                         <div class="content">
                             <div class="left-side box-itens">
-
+<!-- 
                                 <div class="tabela">
                                     <div class="topo">
                                         <div>Usuário</div>
@@ -58,10 +58,10 @@
                                             <span>Usuario</span>
                                         </div>
                                     </div>
-                                </div>
+                                </div> -->
 
-
-                                <!-- <div class="tabelas">
+<!-- 
+                                <div class="tabelas">
                                     <table class="tabela-pessoas">
                                         <tr class="linha">
                                             <th>Usuario</th>
