div do header criada

--- a/site/public/dashboard/html/computadorIndividual.html
+++ b/site/public/dashboard/html/computadorIndividual.html
@@ -7,6 +7,7 @@
     <title>PCindividual</title>
     <link rel="stylesheet" href="../css/geral.css">
     <link rel="stylesheet" href="../css/computadores.css">
+    <link rel="stylesheet" href="../css/computadorIndividual.css">
     <script src="../js/computadores.js"></script>
 </head>
 <body>
@@ -31,6 +32,40 @@
             </div>
         </div>
 
+    </section>
+    <section class="right-side-window">
+        <div class="container">
+            <div class="pc-info">
+                <div class="title1">
+                    <span style="color: white" class="text-geral"
+                            id="text-geral14">IDENTIFICADOR:</span>
+
+                    <span style="color: white" class="text-geral"
+                            id="text-geral14">Setor:</span>        
+                </div>
+
+                <div class="title2">
+                    <span style="color: white" class="text-geral"
+                            id="text-geral14">REDE:</span>
+
+                    <span style="color: white" class="text-geral"
+                            id="text-geral14">RAM:</span> 
+
+                    <span style="color: white" class="text-geral"
+                            id="text-geral14">TIPO  UNIDADE MEMORIA</span>   
+
+
+                </div>
+
+
+            </div>
+
+
+
+
+
+
+        </div>  
     </section>
 </body>
 </html>
