--- a/site/public/dashboard/html/computadorIndividual.html
+++ b/site/public/dashboard/html/computadorIndividual.html
@@ -34,7 +34,7 @@
 
     </section>
     <section class="right-side-window">
-        <div class="container">
+        <div class="container" id="PcInd">
             <div class="pc-info">
                 <div class="title1">
                     <span style="color: white" class="text-geral"
@@ -53,13 +53,21 @@
 
                     <span style="color: white" class="text-geral"
                             id="text-geral14">TIPO  UNIDADE MEMORIA</span>   
-
-
                 </div>
+            </div>
+            <div class="grafics">
+            <div class="grafics1">
+                <div class="grafico1"></div>
+                <div class="grafico2"></div>
+            </div>
+            <div class="grafics2">
+                <div class="grafico3"></div>
+                <div class="grafico4"></div>
+            </div>
 
 
             </div>
-
+        </div>
 
 
 
