--- a/site/public/dashboard/html/computadores.html
+++ b/site/public/dashboard/html/computadores.html
@@ -80,7 +80,7 @@
 
             </div>
 
-            <div class="pc"> <a href="computadorIndividual.html">
+            <div class="pc">
 
                 <div class="pc-container"> 
                     <!-- <div class="pcIndiv">
@@ -103,7 +103,7 @@
                         </div>
                     </div> -->
                 </div>
-            </a></div>
+            </div>
 
             <div class="preFooter">
                 <div class="botoes">
