arrumando campos laterais

--- a/site/public/dashboard/html/analytcs.html
+++ b/site/public/dashboard/html/analytcs.html
@@ -19,7 +19,7 @@
                 <div><a href="home.html"><span class="text-geral" id="text-geral13">Visão geral</span></a></div>
                 <div><a href="computadores.html"><span class="text-geral" id="text-geral14">Computadores</span></a></div>
                 <div><a href="usuarios.html"><span class="text-geral" id="text-geral15">Usuários</span></a></div>
-                <div><a href="analytcs.html"><span style="color: #4eabe9" class="text-geral" id="text-geral16">Analytics</span></a></div>
+                <div class="destaque"><a href="analytcs.html"><span style="color: #4eabe9" class="text-geral" id="text-geral16">Analytics</span></a></div>
             </div>
 
             <div class="sair-button">
