--- a/site/public/dashboard/html/home.html
+++ b/site/public/dashboard/html/home.html
@@ -19,7 +19,7 @@
             </div>
 
             <div class="nav-itens">
-                <div><span class="text-geral" id="text-geral13" style="color: #4eabe9">Visão geral</span></div>
+                <div class="destaque"><span class="text-geral" id="text-geral13" style="color: #4eabe9">Visão geral</span></div>
                 <div><a href="computadores.html"><span class="text-geral" id="text-geral14">Computadores</span></a></div>
                 <div><a href="usuarios.html"><span class="text-geral" id="text-geral15">Usuários</span></a></div>
                 <div><a href="analytcs.html"><span class="text-geral" id="text-geral16">Analytics</span></a></div>
@@ -137,11 +137,11 @@
             </div>
         </div>
 
-        <div id="modal_legenda_capturas" class="modal">
+        <!-- <div id="modal_legenda_capturas" class="modal">
             <div class="caixa captura">
 
             </div>
-        </div>
+        </div> -->
 
     </section>
 </body>
