--- a/site/public/dashboard/html/usuarios.html
+++ b/site/public/dashboard/html/usuarios.html
@@ -19,7 +19,7 @@
             <div class="nav-itens">
                 <div><a href="home.html"><span class="text-geral" id="text-geral13">Visão geral</span></a></div>
                 <div><a href="computadores.html"><span class="text-geral" id="text-geral14">Computadores</span></a></div>
-                <div><span style="color: #4eabe9" class="text-geral" id="text-geral15">Usuários</span></div>
+                <div class="destaque"><span style="color: #4eabe9" class="text-geral" id="text-geral15">Usuários</span></div>
                 <div><a href="analytcs.html"><span class="text-geral" id="text-geral16">Analytics</span></a></div>
             </div>
 
