--- a/site/public/dashboard/html/computadores.html
+++ b/site/public/dashboard/html/computadores.html
@@ -22,7 +22,7 @@
 
             <div class="nav-itens">
                 <div><a href="home.html"><span class="text-geral" id="text-geral13">Visão geral</span></a></div>
-                <div><a href="computadores.html"><span style="color: #4eabe9" class="text-geral"
+                <div class="destaque"><a href="computadores.html"><span style="color: #4eabe9" class="text-geral"
                             id="text-geral14">Computadores</span></a></div>
                 <div><a href="usuarios.html"><span class="text-geral" id="text-geral15">Usuários</span></a></div>
                 <div><a href="analytcs.html"><span class="text-geral" id="text-geral16">Analytics</span></a></div>
